public/css/chat/chat.css
.window {
    padding: 10px;
    background-color: #dddddd;
    border-radius: 0;
}

.message-center {
    background-color: #FFFFFF;
    border: 1px solid #c69ebe;
    min-height:400px;
    max-height:400px;
    overflow-y:auto;
    margin-bottom:10px;
}

#messages {
    list-style: none;
    padding:0;
}

.message-box {
    padding: 2px 6px;
    background-color: #f1dbf3;
    color: #a466b0;
    position:relative;
}

.message-timestamp {
    display:inline-block;
    padding: 4px;
    color: #ab96b0;
    text-align: right;
    position:absolute;
    bottom:0;
}

.message-text {
    display:inline-block;
    padding: 0 2px;
}

